--- a/templates/home.html
+++ b/templates/home.html
@@ -94,14 +94,24 @@ body {
     }
     </style>
 
-    <form id="post-form" method="POST" action="checkview">
-        {% csrf_token %}
-        <label>Room Name</label>
-        <input type="text" name="room_name" id="room_name" width="100px" />
-        <label>Username</label>
-        <input type="text" name="username" id="username" width="100px" />
-        <input type="submit" value="Enter Room">
-    </form>
+<form id="post-form" method="POST" action="checkview">
+  {% csrf_token %}
+  <label for="room">Sélectionnez un salon :</label>
+  <select name="room_name" id="room">
+      {% for room in rooms %}
+          <option value="{{ room.name }}">{{ room.name }}</option>
+      {% endfor %}
+  </select>
+
+  <label>Nom d'utilisateur</label>
+  <input type="text" name="username" id="username" required />
+
+  <input type="submit" value="Entrer dans le salon">
+</form>
+
+
+
+    
 </div>
 
 
